# flocking-bevy-rust

./: Cargo.toml
src/: boid.rs  main.rs  util.rs
