[package]
name = "flocking-bevy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_rapier2d = "0.22"
rand = "0.8"

[dependencies.bevy]
version = "0.11"
default_features = false
features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
    "png",
]
